@@ -1,27 +1,37 @@
-.git
-.gitattributes
-.gitignore
-.local
-.R_tags
-.staging
-.tags
-.travis.yml
-aux$
-log$
-out$
+^.codecov_token$
+^.git$
+^.gitattributes
+^.gitignore
+^.R_tags
+^.tags
+^.travis.yml
+^\..*installed
 cache
 README.Rmd
 m4
 Makefile
 man-roxygen
-.roxygen2
-nodist
-rebuildTags.sh
-madness_\d.+tar.gz$
-madness_\d.+crancheck$
-madness.Rcheck
+^\.docker_img$
+^nodist$
+^rebuildTags.sh
+^madness.*.tar.gz$
+^madness.Rcheck$
+^madness$
+madness/libs
 ^github_extra
 unit_test.log
 LICENSE
-docker
+^docker$
+\.o$
+\.so$
+\.crancheck$
+^.drat_*
+^.check_tmp
 rpkg_make
+libs
+nohup.out
+vignettes
+Rd2.pdf
+fooz
+.Rd2pdf*
+submodule_directions.sh
