@@ -23,7 +23,6 @@ exportMethods("xtag<-")
 exportMethods(as.array)
 exportMethods(as.matrix)
 exportMethods(as.numeric)
-exportMethods(c)
 exportMethods(cbind2)
 exportMethods(colMeans)
 exportMethods(colSums)
